[Qt][Texmap] Error of cross-compiling webkit with Qt 4.8.1 https://bugs.webkit.org/show_bug.cgi?id=84321

Speculative build-fix for Qt 4.8.
Use QGLContext for Qt 4.x instead of the platform-specific context.

Reviewed by Simon Hausmann.

No new tests, build fix.

* platform/graphics/texmap/TextureMapperGL.cpp:
(SharedGLData):
(WebCore::TextureMapperGLData::SharedGLData::getCurrentGLContext):


Canonical link: https://commits.webkit.org/102697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115576 268f45cc-cd09-0410-ab3c-d52691b4dbfc